# oubliette-trap

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/oubliette/: auth_middleware.py  cli.py  license.py  license_issuer.py  models.py  rbac.py  server.py
src/oubliette/deception/: profile.py  session.py
src/oubliette/fingerprint/: classifier.py  passive.py  probes.py
src/oubliette/intel/: events.py  export.py
src/oubliette_trap/: __init__.py  cli.py  license.py  license_issuer.py  license_webhook.py  metering.py  models.py  server.py  tenant.py
src/oubliette_trap/deception/: profile.py  session.py
src/oubliette_trap/fingerprint/: classifier.py  passive.py  probes.py
src/oubliette_trap/intel/: events.py  export.py
tests/: test_classifier.py  test_deception_session.py  test_ed25519_license.py  test_events.py  test_export.py  test_license_sdk.py  test_metering_negative_quantity.py  test_models.py  test_passive.py  test_probes.py  test_profile.py  test_security_review_20260702.py  test_server.py
