[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oubliette-trap"
version = "0.3.0"
description = "AI Agent Deception Platform -- honeypots, fingerprinting, and intelligence for autonomous AI threats"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Oubliette Security" },
]
keywords = [
    "ai", "security", "honeypot", "deception", "mcp", "agent",
    "fingerprinting", "threat-intelligence", "llm", "red-team",
]
dependencies = [
    "mcp>=1.20.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
# Ed25519 asymmetric license signing/verification.
licensing = ["cryptography>=48.0.1"]
dev = ["pytest>=8.0", "pytest-asyncio>=1.0", "cryptography>=48.0.1"]
# Clean-machine test environment: `uv pip install -e ".[test]" && pytest` -> green.
test = ["oubliette-trap[dev]"]

[project.scripts]
oubliette-trap = "oubliette_trap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["__pycache__", "build", "dist", ".venv", "venv", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM117",
    "RUF005", "RUF012", "RUF022",
    "B008", "B027", "B904",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]

[tool.mypy]
# Flask is an optional (api-extra) dependency and ships without mypy stubs;
# the CI mypy job installs only .[dev], so resolve its imports to Any rather
# than failing strict on the optional web glue.
[[tool.mypy.overrides]]
module = ["flask", "flask.*"]
ignore_missing_imports = true

# Flask's route decorators resolve to Any (stub-less), which trips
# --strict's untyped-decorator rule on the thin webhook glue. Allow it.
[[tool.mypy.overrides]]
module = ["oubliette_trap.license_webhook"]
disallow_untyped_decorators = false
